	_localtime32, _wctime32): Create _CRTALIAS when MSVCRT_VERSION < 800.
	(_difftime64, _mkgtime64): Guard declaration for MSVCRT_VERSION > 800.
	These functions do not exist in MSVCRT.DLL before Vista.
	* include/wchar.h (_wctime32): Create _CRTALIAS when MSVCRT_VERSION
	< 800.
	(_wfindfirst32, _wfindnext32): Create _CRTALIAS.

2013-05-28  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/time.h: Correct use of MSVCRT_VERSION.
	Correct mistyped __MINGW_NOTHROW macro.

2013-05-27  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/sys/types.h (_USE_32BIT_TIME_T): Rework the definitions
	controlled by _USE_32BIT_TIME_T in light of MSVCRT_VERSION being
	different with differing OS versions.
	* include/time.h (_USE_32BIT_TIME_T): Ditto.
	* include/sys/stat.h (_USE_32BIT_TIME_T): Ditto.
	* include/wchar.h (_USE_32BIT_TIME_T): Ditto.
	* include/_mingw.h (_USE_32BIT_TIME_T): Issue a warning when
	_USE_32BIT_TIME_T is enabled and MSVCRT_VERSION value does not
	support it.
	* lib/lib32/msvcrt.def.in: Always define all definitions in light of
	MSVCRT.DLL
	being different versions on differing OS.
	* TODO: Add a note about needing a warning when a function is being
	used but not defined within the MSVCRT_VERSION value.

2013-05-21  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in (clean-dist, clean-dist-mingwrt, clean-dist-w32api,
	clean-dist-wsl): New targets.

2013-05-15  Niels Kristian Bech Jensen  <nkbj@users.sourceforge.net>

	* include/control.h: Correct inclusion of _mingw.h.  Issue: #1956.
	* include/sys/stat.h: Include string.h as appropriate for memset
	declaration.  Issue: #1956.
	* include/wchar.h: Ditto.

2013-05-15  Earnie Boyd  <earnie@users.sourceforge.net>

	* .gitignore: Add nbproject folder.
	* NEWS: Add note about the globbing change.
	* include/_mingw.h: Correct check for GCC version >= 3.4.5. Issue: #1958.

2013-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid a potential SIGSEGV crash on CRT start-up.
