@@ -8,11 +8,11 @@
  * the rights to use, copy, modify, merge, publish, distribute, sublicense,
  * and/or sell copies of the Software, and to permit persons to whom the
  * Software is furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice (including the next
  * paragraph) shall be included in all copies or substantial portions of the
  * Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,14 +21,16 @@
  * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
  * DEALINGS IN THE SOFTWARE.
  */
+/* Include here to prevent circular dependencies if windows.h not already
+ * included. ** DO NOT MOVE TO GUARD ** */
+#ifndef RPC_NO_WINDOWS_H
+#include <windows.h>
+#endif
+
 #ifndef _RPC_H
 #define _RPC_H
 #pragma GCC system_header
 #include <_mingw.h>
-
-#ifndef RPC_NO_WINDOWS_H
-#include <windows.h>
-#endif
 
 #ifdef __cplusplus
 extern "C" {
